# personal-ai-assistant

./: .gitignore  CMakeLists.txt  main.cpp
Models/: TelegramBot.cpp  TelegramBot.h
